# multi-draw-indirect-demo

./: CMakeLists.txt  README.md
resources/shaders/: deferred.fs  deferred.vs  gbuffer.fs  gbuffer.vs
src/: main.cpp
